# piano

./: .gitignore
MidiParser/: CMakeLists.txt
MidiParser/lib/: midi_parser.cc  midi_parser.hh  piano.hh
MidiParser/test/: test.cc
esp/: CMakeLists.txt  README.md
esp/main/: CMakeLists.txt  main.cpp
midi/: makefile  midi.cc  piano.hh
pc/: README.md  piano.py
